--- a/src/components/profile/profilepage.css
+++ b/src/components/profile/profilepage.css
@@ -36,6 +36,43 @@
   font-weight: bold;
 }
 
+/* Estilos para la lista de requisitos de la contraseña */
+.password-requirements {
+  list-style-type: none;
+  padding: 0;
+  margin-top: 10px;
+  text-align: left;
+  color: #666;
+}
+
+.password-requirements li {
+  margin-bottom: 5px;
+  padding-left: 25px;
+  position: relative;
+  font-size: 16px;
+}
+
+.password-requirements li::before {
+  content: "✘"; /* Por defecto, mostrar X */
+  color: red; /* Color rojo para ✘ */
+  position: absolute;
+  left: 0;
+  top: 0;
+  font-size: 18px;
+  line-height: 1;
+}
+
+.password-requirements li.valid::before {
+  content: "✔"; /* Cambiar a check cuando es válido */
+  color: green; /* Color verde para ✔ */
+}
+
+/* Estilos para el botón de envío deshabilitado */
+.btn-form:disabled {
+  background-color: #ccc;
+  cursor: not-allowed;
+}
+
 .btn-form {
   width: 100%;
   background-color: #4caf50;
