--- a/src/components/footer/Footer.css
+++ b/src/components/footer/Footer.css
@@ -1,3 +1,42 @@
+.footer {
+  background-color: #0f172a;
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+  margin-top: auto;
+  color: #ffff;
+}
+
+.footer-section {
+  margin-bottom: 1rem;
+}
+
+.footer-title {
+  font-weight: bold;
+  display: block;
+  margin-bottom: 0.5rem;
+}
+
+.social-link {
+  display: flex;
+  align-items: center;
+  margin-right: 1rem;
+  text-decoration: none;
+  color: inherit;
+  transition: color 0.3s ease;
+}
+
+.social-link:hover {
+  color: #1d4ed8;
+}
+
 .social-icon {
-  cursor: pointer;
+  margin-right: 0.5rem;
+}
+
+.social-name {
+  font-size: 1.2rem;
+}
+
+.text-center {
+  text-align: center;
 }
