--- a/src/components/profile/profilepage.css
+++ b/src/components/profile/profilepage.css
@@ -3,21 +3,29 @@
   margin: 0 auto;
   padding: 20px;
   text-align: center;
+ 
 }
 
 .profile-container h1 {
   margin-bottom: 40px;
   font-size: 36px;
-  color: #333;
-}
 
+}
+.title-form{
+  color: #fff;
+
+}
+.titles-appointments{
+  color: #0f172a;
+}
 .formProfile {
   max-width: 500px;
   margin: 0 auto 40px;
   padding: 20px;
-  background-color: #f9f9f9;
+  background-color: #1d4ed8;
   border-radius: 10px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  color: #fff;
 }
 
 .input-form {
@@ -42,7 +50,7 @@
   padding: 0;
   margin-top: 10px;
   text-align: left;
-  color: #666;
+  color: #fff;
 }
 
 .password-requirements li {
@@ -93,6 +101,7 @@
   flex-wrap: wrap;
   justify-content: center;
   gap: 20px;
+  
 }
 
 .card-container ul {
@@ -102,18 +111,19 @@
   flex-wrap: wrap;
   gap: 20px;
   justify-content: center;
+  
 }
 
 .card-item {
-  background-color: #fff;
   border-radius: 10px;
-  box-shadow: 0 8px 8px blue;
+  
   margin: 20px;
   padding: 20px;
   max-width: 300px;
   width: 100%;
   box-sizing: border-box;
   transition: transform 0.2s;
+  background-color:#0f172a;
 }
 
 .card-item:hover {
@@ -123,7 +133,7 @@
 .card-title {
   font-size: 24px;
   margin-bottom: 10px;
-  color: #333;
+  color: #fff;
   overflow: hidden;
   text-overflow: ellipsis;
   white-space: nowrap;
