--- a/src/components/navBar/NavBar.css
+++ b/src/components/navBar/NavBar.css
@@ -8,7 +8,7 @@ nav {
     align-items: center;
     background-color: #0f172a;
     color: white;
-    position: sticky;
+    position:initial;
     top: 0;
 }
 
