--- a/src/components/dashboard/Dashboard.css
+++ b/src/components/dashboard/Dashboard.css
@@ -14,3 +14,19 @@
   max-width: 600px;
   margin: auto;
 }
+.link-ref{
+  background-color: #0f172a; /* Fondo del botón */
+  color: white; /* Color del texto del botón */
+  padding: 0.75rem;
+  border: none;
+  border-radius: 4px;
+  font-size: 1rem;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+  text-align: center;
+  text-decoration: none;
+}
+.link-ref:hover,
+.link-ref:focus {
+  background-color: #173cbc; /* Fondo del botón en hover y foco */
+}
