--- a/src/components/dashboard/Dashboard.css
+++ b/src/components/dashboard/Dashboard.css
@@ -1,22 +1,22 @@
 .dashboard-container {
   display: flex;
   flex-direction: column;
-  align-items: center; /* Centra horizontalmente */
-  justify-content: center; /* Centra verticalmente */
-  height: 100%; /* Ajusta la altura para que ocupe todo el espacio disponible */
+  align-items: center;
+  justify-content: center;
+  height: 100%;
 }
 
 .dashboard-container h1 {
   padding: 15px;
-  margin: 0; /* Elimina el margen por defecto */
+  margin: 0;
 }
 .dashboard-container p {
   max-width: 600px;
   margin: auto;
 }
-.link-ref{
-  background-color: #0f172a; /* Fondo del botón */
-  color: white; /* Color del texto del botón */
+.link-ref {
+  background-color: #0f172a;
+  color: white;
   padding: 0.75rem;
   border: none;
   border-radius: 4px;
@@ -28,5 +28,5 @@
 }
 .link-ref:hover,
 .link-ref:focus {
-  background-color: #173cbc; /* Fondo del botón en hover y foco */
+  background-color: #173cbc;
 }
