--- a/src/components/register/Register.css
+++ b/src/components/register/Register.css
@@ -1,15 +1,13 @@
-/* Contenedor del formulario */
 .registro-form-container {
-  background-color: #0f172a; /* Fondo del formulario */
+  background-color: #0f172a;
   padding: 2rem;
   border-radius: 8px;
   max-width: 400px;
   margin: 0 auto;
-  color: white; /* Texto blanco para buen contraste */
+  color: white;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 
-/* Estilos del formulario */
 .registro-form {
   display: flex;
   flex-direction: column;
@@ -18,42 +16,37 @@
 h2 {
   text-align: center;
   margin-bottom: 1rem;
-  color: white; /* Color del título */
+  color: white;
 }
 
-/* Grupo de formulario */
 .form-group {
   margin-bottom: 1rem;
 }
 
-/* Etiquetas */
 .form-group label {
   display: block;
   margin-bottom: 0.5rem;
-  color: white; /* Color de las etiquetas */
+  color: white;
 }
 
-/* Campos de entrada */
 .input-field {
   width: 100%;
   padding: 0.5rem;
   border-radius: 4px;
-  border: 1px solid #173cbc; /* Borde del campo de entrada */
+  border: 1px solid #173cbc;
   background-color: white;
-  color: black; /* Color del texto */
+  color: black;
   font-size: 1rem;
 }
 
-/* Campos de entrada en foco */
 .input-field:focus {
   outline: none;
-  border-color: #1d4ed8; /* Color del borde en foco */
+  border-color: #1d4ed8;
 }
 
-/* Botón */
 .button-form {
-  background-color: #1d4ed8; /* Fondo del botón */
-  color: white; /* Color del texto del botón */
+  background-color: #1d4ed8;
+  color: white;
   padding: 0.75rem;
   border: none;
   border-radius: 4px;
@@ -63,8 +56,7 @@ h2 {
   text-align: center;
 }
 
-/* Botón en foco y hover */
 .button-form:hover,
 .button-form:focus {
-  background-color: #173cbc; /* Fondo del botón en hover y foco */
+  background-color: #173cbc;
 }
