--- a/src/components/footer/Footer.css
+++ b/src/components/footer/Footer.css
@@ -1,9 +1,21 @@
 .footer {
-  background-color: #0f172a;
   padding-top: 1rem;
   padding-bottom: 1rem;
   margin-top: auto;
-  color: #ffff;
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.footer.light {
+  background-color: rgb(239, 234, 226);
+  color: black;
+}
+
+.footer.dark {
+  background-color: #0f172a;
+  color: white;
 }
 
 .footer-section {
@@ -39,4 +51,22 @@
 
 .text-center {
   text-align: center;
+}
+
+.footer.light .footer-title,
+.footer.light .social-link {
+  color: black;
+}
+
+.footer.light .social-link:hover {
+  color: #d1d5db;
+}
+
+.footer.dark .footer-title,
+.footer.dark .social-link {
+  color: white;
+}
+
+.footer.dark .social-link:hover {
+  color: #172554;
 }
