--- a/src/components/navBar/NavBar.css
+++ b/src/components/navBar/NavBar.css
@@ -2,14 +2,23 @@
   background-color: #1d4ed8;
 }
 
+.navbar.light {
+  background-color: rgb(239, 234, 226);
+  color: black;
+}
+
+.navbar.dark {
+  background-color: #0f172a;
+  color: white;
+}
+
 nav {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  background-color: #0f172a;
-  color: white;
   position: initial;
   top: 0;
+  width: 100%;
 }
 
 nav .title {
@@ -17,7 +26,6 @@ nav .title {
   margin: 1rem;
   font-weight: bold;
   text-decoration: none;
-  color: white;
 }
 
 nav ul {
@@ -31,13 +39,30 @@ nav ul li {
 nav ul li a {
   display: block;
   text-decoration: none;
-  color: white;
   padding: 0.5rem;
   margin: 0 0.5rem;
   border-radius: 0.5rem;
 }
 
 nav ul li a:not(.active):hover {
+  background-color: #172554;
+}
+
+nav.light .title,
+nav.light ul li a {
+  color: black;
+}
+
+nav.light ul li a:not(.active):hover {
+  background-color: #d1d5db;
+}
+
+nav.dark .title,
+nav.dark ul li a {
+  color: white;
+}
+
+nav.dark ul li a:not(.active):hover {
   background-color: #172554;
 }
 
