--- a/src/components/appointments/createAppointment/CreateAppointment.css
+++ b/src/components/appointments/createAppointment/CreateAppointment.css
@@ -1,49 +1,69 @@
-.form-container {
+.form-container-appointment.dark {
   background-color: #0f172a;
+  color: #fff;
+}
+.form-container-appointment.light {
+  background-color: rgb(239, 234, 226);
+  color: black;
+}
+.form-container-appointment {
   width: 300px;
   margin: 0 auto;
   padding: 20px;
+  margin-top: 90px;
+  margin-bottom: 90px;
   border: 1px solid #ccc;
   border-radius: 5px;
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
   height: max-content;
-  color: #fff;
 }
 
-.form-container h2 {
+.form-container-appointment h2 {
   margin-top: 0;
   margin-bottom: 20px;
 }
+.form-container-appointment.dark h2 {
+  color: black;
+}
+.form-container-appointment.light h2 {
+  color: black;
+}
 
-.form-container label {
+.form-container-appointment label {
   display: block;
   margin-bottom: 5px;
 }
 
-.form-container input[type="date"],
-.form-container input[type="time"],
-.form-container select {
+.form-container-appointment input[type="date"],
+.form-container-appointment input[type="time"],
+.form-container-appointment select {
   width: 100%;
   padding: 8px;
   margin-bottom: 15px;
-  border: 1px solid #ccc;
+  border: 1px solid #cccccc;
   border-radius: 5px;
 }
 
-.form-container input[type="checkbox"] {
+.form-container-appointment input[type="checkbox"] {
   margin-right: 5px;
 }
 
-.form-container button {
-  width: 100%;
-  padding: 10px;
+.form-container-appointment.dark button {
   background-color: #007bff;
   color: #fff;
+}
+.form-container-appointment.light button {
+  background-color: #007bff;
+  color: #fff;
+}
+.form-container-appointment button {
+  width: 100%;
+  padding: 10px;
   border: none;
   border-radius: 5px;
   cursor: pointer;
 }
 
-.form-container button:hover {
+.form-container-appointment button:hover {
   background-color: #0056b3;
 }
