--- a/src/components/ChatBot/ChatBotComponent.css
+++ b/src/components/ChatBot/ChatBotComponent.css
@@ -1,6 +1,6 @@
 .chatbot-toggle-button {
   position: fixed;
-  bottom: 20px; /* Posición inicial en la esquina inferior derecha */
+  bottom: 20px;
   right: 20px;
   background-color: #00bcd4;
   color: white;
@@ -8,7 +8,7 @@
   border-radius: 5px;
   padding: 10px 20px;
   cursor: pointer;
-  z-index: 1001; /* Asegura que esté por encima de otros contenidos */
+  z-index: 1001;
 }
 .chatbot-container {
   position: fixed;
@@ -21,6 +21,7 @@
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
   z-index: 1000;
   background-color: #f5f8fb;
+  color: black;
   overflow: hidden;
 }
 
