--- a/src/components/galery-photos/galery-photos.css
+++ b/src/components/galery-photos/galery-photos.css
@@ -1,35 +1,56 @@
-.carousel-image {
-  max-width: 400px;
-  height: auto;
-  max-height: 400px;
-  object-fit: cover;
-}
-
-.carousel-slide {
+.galery-container {
   display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 200px;
+  flex-wrap: wrap;
+  justify-content: space-around;
+}
+.galery-container.dark .photo-card {
+  border: 1px solid #ddd;
+  background-color: #0f172a;
+  color: #fff;
+}
+.galery-container.dark .photo-title {
+  color: #fff;
+}
+
+.galery-container.light .photo-title {
+  color: #000;
+}
+.galery-container.light .photo-card {
+  border: 1px solid #000000;
+  background-color: rgb(239, 234, 226);
+  color: #000;
+}
+
+.photo-card {
+  border: 1px solid #ddd;
+  border-radius: 8px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  margin: 20px;
+  width: 300px;
+  text-align: center;
   overflow: hidden;
 }
 
-.galery-container .carousel .slider-wrapper {
-  max-height: 400px;
-  overflow: hidden;
+.photo-image {
+  width: 100%;
+  height: 55%;
 }
 
-.galery-container .carousel .control-arrow {
-  background: rgba(0, 0, 0, 0.5);
-  border-radius: 20%;
-  width: 40px;
-  height: 55px;
-  top: calc(50% - 20px);
+.photo-title {
+  font-size: 1.5em;
+  margin: 20px 0;
 }
 
-.galery-container .carousel .control-prev {
-  left: 35%;
+.photo-button {
+  display: inline-block;
+  margin: 20px 0;
+  padding: 10px 20px;
+  background-color: #007bff;
+  color: #fff;
+  text-decoration: none;
+  border-radius: 5px;
 }
 
-.galery-container .carousel .control-next {
-  right: 35%;
+.photo-button:hover {
+  background-color: #0056b3;
 }
