--- a/src/components/profile/profilepage.css
+++ b/src/components/profile/profilepage.css
@@ -9,12 +9,7 @@
   margin-bottom: 40px;
   font-size: 36px;
 }
-.title-form {
-  color: #fff;
-}
-.titles-appointments {
-  color: #0f172a;
-}
+
 .formProfile {
   max-width: 500px;
   margin: 0 auto 40px;
@@ -22,6 +17,33 @@
   background-color: #1d4ed8;
   border-radius: 10px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  color: #fff;
+}
+.formProfile.light {
+  background-color: rgb(239, 234, 226);
+  color: #000;
+}
+.formProfile.light .title-form {
+  color: #000;
+}
+
+.formProfile.light .password-requirements {
+  color: #000;
+}
+.formProfile.dark .password-requirements {
+  color: #fff;
+}
+.formProfile.dark .titles-appointments {
+  color: #ffff;
+}
+.formProfile.light .titles-appointments {
+  color: #000;
+}
+.formProfile.dark {
+  background-color: #0f172a;
+  color: #fff;
+}
+.formProfile.dark .title-form {
   color: #fff;
 }
 
@@ -46,7 +68,6 @@
   padding: 0;
   margin-top: 10px;
   text-align: left;
-  color: #fff;
 }
 
 .password-requirements li {
